--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,32 +1,95 @@
 * {
   font-family: Inter;
 }
+p {
+  color: white;
+}
+
+body {
+  background-color: rgb(8, 0, 44);
+}
 
 .Container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: rgb(8, 0, 44);
 }
 
 .socialLinks {
   display: flex;
   flex-direction: column;
+  font-size: 1.3rem;
   width: 400px;
-
   h2 {
+    color: white;
     padding-left: 1rem;
+    margin-top: 0;
   }
   .linkContainer {
     display: flex;
     justify-content: space-around;
+    margin-bottom: 1rem;
   }
 }
 
 .editProfile {
-  background: rgb(91, 88, 255);
+  background: rgba(48, 255, 83, 0.767);
   color: white;
   padding: 0.75rem 1rem;
-  margin-top: 1rem;
+  margin-top: 0.5rem;
+  margin-bottom: 1rem;
   text-decoration: none;
   border-radius: 0.25rem;
+}
+
+// BUTTONS
+button.socialItem {
+  outline: none;
+  background-color: rgb(5, 0, 27);
+  border: none;
+  color: rgb(210, 255, 229);
+  cursor: pointer;
+}
+
+#displayLink {
+  outline: none;
+  border: none;
+  background-color: rgb(236, 236, 236);
+  font-size: 1.2rem;
+  border-radius: 0.25rem;
+  height: fit-content;
+  margin: 1rem;
+}
+
+#profileForm {
+  display: flex;
+  flex-direction: column;
+  color: white;
+  width: 300px;
+  padding: 1rem;
+
+  label {
+    font-size: 1rem;
+    font-weight: 300;
+    margin-bottom: 0.25rem;
+    color: aliceblue;
+  }
+  input {
+    margin-bottom: 1rem;
+    background-color: rgba(231, 231, 231, 0.87);
+    border: none;
+    font-size: 1.2rem;
+    border-radius: 0.1rem;
+  }
+  button {
+    border: none;
+    outline: none;
+    cursor: pointer;
+  }
+}
+
+.back {
+  padding: 1rem;
+  color: rgb(198, 163, 255);
 }
